WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295538
REGRESSION(
287399@main
): [Skia] Broke rendering of various PDFs
https://bugs.webkit.org/show_bug.cgi?id=295538
Summary
REGRESSION(287399@main): [Skia] Broke rendering of various PDFs
Michael Catanzaro
Reported
2025-07-07 12:49:38 PDT
Load
https://www.transitchicago.com/assets/1/6/Slow_Zone_Map_-_June_2025.pdf
and scroll down to the second page. Notice the rendering is garbled and broken. I finally bisected it; sorry it took so long. This is a regression from
287399@main
"[GTK][WPE][Skia] Allow cross-thread transfer of accelerated ImageBitmap".
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2025-11-25 06:10:34 PST
We should probably revert
287399@main
.
Michael Catanzaro
Comment 2
2025-12-10 11:51:09 PST
A revert actually does fix this bug, so let's do that for now.
Pawel Lampe
Comment 3
2025-12-11 06:52:05 PST
Yes, a revert is very good idea especially that the commit in question is just a performance improvement. Unless already reverted, I'll revert tomorrow.
Michael Catanzaro
Comment 4
2025-12-11 09:54:38 PST
I prepared a revert in
https://github.com/WebKit/WebKit/pull/55184
but I see I failed to link it to this bug report, oops.
Nikolas Zimmermann
Comment 5
2025-12-14 15:54:10 PST
I got a fix for this, will need to clean it up tomorrow and will submit a PR.
Nikolas Zimmermann
Comment 6
2025-12-15 06:31:57 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55405
Nikolas Zimmermann
Comment 7
2025-12-15 06:34:55 PST
Michael, I'd be glad if you could confirm that this fully fixes the regression for you as well -- the PR is still lacking a test, I'm thinking about a proper way to capture the problem in a layout test..
EWS
Comment 8
2025-12-18 09:24:34 PST
Committed
304687@main
(48db7480703c): <
https://commits.webkit.org/304687@main
> Reviewed commits have been landed. Closing PR #55405 and removing active labels.
Michael Catanzaro
Comment 9
2026-01-06 11:27:08 PST
Confirmed fixed, thank you!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug